fix: make the mode selection more readable / letter spacing

--- a/src/app/simulation/grid-settings/grid-settings.component.scss
+++ b/src/app/simulation/grid-settings/grid-settings.component.scss
@@ -1,11 +1,7 @@
-.button-maze {
+.algo-button {
   border-style: solid;
   border-width: 2px;
-}
-
-.button-path {
-  border-style: solid;
-  border-width: 2px;
+  letter-spacing: 0.1rem;
 }
 
 .is-warning-box {
